<resources>
    <string name="app_name">Apya</string>

    <string name="facebook_application_id" translatable="false">391022657960952</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb391022657960952</string>

    <!-- Preferences file -->
    <string name="preferences_file">com.carko.carko.PREFERENCE_FILE_KEY</string>

    <!-- Main activity -->
    <string name="title_activity_main">Apya</string>

    <!-- Drawer menu -->
    <string name="menu_item_payment">Payment</string>
    <string name="menu_item_vehicule">Vehicle</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_group_parking">Parking</string>
    <string name="menu_item_rent">Rent your space</string>
    <string name="menu_item_payout">Transaction Information</string>

    <!-- Map Activity -->
    <string name="title_activity_map">MapActivity</string>
    <string name="permission_rationale">Location permissions are needed for locating nearby
        parkings.
    </string>
    <string name="permission_denied_explanation">
        Permissions are required for this app to work.
        You can set them in the app\'s settings later.
    </string>
    <string name="ask_again">Ask again</string>
    <string name="settings">Settings</string>
    <string name="reserve_now">Reserve Now</string>

    <!-- Parking description -->
    <string name="fragment_parking_desc_more_photos">More photos</string>
    <string name="fragment_parking_desc_availability">Availability</string>
    <string name="fragment_parking_desc_until">Until:</string>
    <string name="fragment_parking_desc_description">Description</string>

    <!-- Rent your space flow -->
    <string name="rent_header">Rent your space</string>
    <string name="rent_description">Listing your parking is simple and takes around 10 minutes</string>
    <string name="rent_get_started">Get started</string>
    <string name="add_parking_button">Next</string>
    <string name="action_search">Search</string>
    <!-- TODO: Replace this + string with a bigger + icon -->
    <string name="action_add_parking">+</string>
    <string name="add_parking_explanation">Move the map to set your spot\'s location</string>
    <string name="title_activity_add_parking_map">Location</string>


    <!-- Credit card -->
    <string name="title_activity_credit_card">Add a Card</string>
    <string name="email_hint">Email</string>
    <string name="action_done">Done</string>

    <!-- Bank Account -->
    <string name="title_activity_bank_account">Transaction Information</string>
    <string name="bank_account_explanation">To receive payment, please enter the following information.</string>
    <string name="bank_account_address_hint">Address</string>
    <string name="bank_account_city_hint">City</string>
    <string name="bank_account_province_hint">Province</string>
    <string name="bank_account_postal_hint">Postal Code</string>
    <string name="bank_account_country_hint">Country</string>
    <string name="bank_account_birth_hint">Date of Birth</string>
    <string name="bank_account_continue_button">Continue</string>
    <string name="bank_info_stripe_message">
        Apya does not store or share any banking information.
        All banking information is communicated through Stripe.</string>
    <string name="bank_information_routing_number_hint">Routing number</string>
    <string name="bank_information_account_number_hint">Account number</string>
    <string name="bank_information_save_button">Save</string>

    <!-- Marker info -->
    <string name="marker_info_tap">Tap to continue…</string>
    <string name="title_activity_parking_detail">ParkingDetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Reservation popup -->
    <string name="reservation_dialog_title">Payment</string>
    <string name="reservation_dialog_cancel">Cancel</string>
    <string name="reservation_dialog_confirm">Confirm</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

</resources>
