<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.carko.carko.context.BankInformationActivity"
    android:background="@color/colorPrimaryDark">

    <include layout="@layout/app_bar"
        android:id="@+id/toolbar_include"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar_include"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@drawable/rounded_primary_box"
            android:text="@string/bank_info_stripe_message"
            android:textColor="@android:color/white"
            android:gravity="center"/>

        <EditText
            android:id="@+id/bank_info_routing_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/bank_information_routing_number_hint"/>

        <EditText
            android:id="@+id/bank_info_account_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_information_account_number_hint"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/check_english"/>

        <Button
            android:id="@+id/bank_info_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/bank_information_save_button"
            android:background="@drawable/round_corner_button_confirm"/>

    </LinearLayout>

</RelativeLayout>
