<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/handle"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/event_name"
                android:text="Event Name"
                android:textColor="@android:color/white"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/address"
                android:text="Adresse"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:text="Ville"
                android:textColor="@android:color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating"
                android:text="Rating"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/reserve_button"
            android:text="@string/reserve_now"
            android:background="@drawable/round_corner_button"
            android:padding="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/photo1"
            android:src="@drawable/ghost"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/photo2"
            android:src="@drawable/ghost"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_parking_desc_more_photos"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_parking_desc_availability"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingStart="8dp"/>

    <View style="@style/Divider"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingStart="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_parking_desc_until"
            android:textColor="@android:color/white"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Midnight the same day"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_parking_desc_description"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"/>

    <View style="@style/Divider"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:paddingStart="8dp"
        android:paddingEnd="8dp" />

</LinearLayout>